--- a/package.json
+++ b/package.json
@@ -1,42 +1,46 @@
 {
-  "name": "repeatsjs-pm",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "npm run start --prefix",
-    "test": "npm run test --prefix",
-    "test-all": "lerna run test --stream",
-    "bootstrap": "lerna bootstrap",
-    "postinstall": "npm run bootstrap",
-    "clean": "rimraf packages/**/lib",
-    "build": "npm run clean && lerna run build --stream",
-    "publish": "lerna publish --yes",
-    "publish-pages": "lerna publish --yes"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/corlogix/repeats.git"
-  },
-  "author": "corlogixco@gmail.com",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/corlogix/repeats/issues"
-  },
-  "homepage": "https://github.com/corlogix/repeats#readme",
-  "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "1.0.1",
-    "@pragmatics/conventional-changelog-preset": "^1.1.1",
-    "@types/chai": "^4.2.22",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.9.2",
-    "chai": "^4.3.4",
-    "gh-pages": "^3.2.3",
-    "lerna": "^4.0.0",
-    "mocha": "^9.1.2",
-    "nyc": "^15.1.0",
-    "rimraf": "^3.0.2",
-    "source-map-support": "^0.5.20",
-    "ts-mockito": "^2.6.1",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
-  }
+	"name": "repeatsjs-pm",
+	"version": "1.0.0",
+	"scripts": {
+		"postinstall": "npm run bootstrap",
+		"bootstrap": "lerna bootstrap",
+		"start": "npm run start --prefix",
+		"test": "npm run test --prefix",
+		"test-all": "lerna run test --stream",
+		"clean": "lerna run clean --stream",
+		"build": "npm run clean && lerna run build --stream",
+		"publish": "lerna publish --yes",
+		"publish-pages": "node scripts/publish-pages.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@github.com/corlogix/repeats.git"
+	},
+	"author": "corlogixco@gmail.com",
+	"license": "GPL-3.0-or-later",
+	"bugs": {
+		"url": "https://github.com/corlogix/fnrepeats/issues"
+	},
+	"homepage": "https://corlogix.github.io/repeats/",
+	"devDependencies": {
+		"@istanbuljs/nyc-config-typescript": "1.0.1",
+		"@pragmatics/conventional-changelog-preset": "^1.1.1",
+		"@types/chai": "^4.2.22",
+		"@types/mocha": "^9.0.0",
+		"@types/node": "^16.9.2",
+		"chai": "^4.3.4",
+		"gh-pages": "^3.2.3",
+		"json-format": "^1.0.1",
+		"lerna": "^4.0.0",
+		"mocha": "^9.1.2",
+		"nyc": "^15.1.0",
+		"rimraf": "^3.0.2",
+		"source-map-support": "^0.5.20",
+		"ts-mockito": "^2.6.1",
+		"ts-node": "^10.2.1",
+		"typescript": "^4.4.3"
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
