--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"clean": "lerna run clean --stream",
 		"build": "npm run clean && lerna run build --stream",
 		"publish": "lerna publish --yes",
-		"publish-pages": "node scripts/publish-pages.js"
+		"maintain-packages": "node scripts/publish-pages.js",
+		"publish-pages": "npm run build -- --scope fnrepeats-documentation && node scripts/publish-pages.js"
 	},
 	"repository": {
 		"type": "git",
@@ -30,6 +31,7 @@
 		"@types/node": "^16.9.2",
 		"chai": "^4.3.4",
 		"gh-pages": "^3.2.3",
+		"jsdoc-parse-plus": "^1.3.0",
 		"json-format": "^1.0.1",
 		"lerna": "^4.0.0",
 		"mocha": "^9.1.2",
