--- a/pages/documentation/package.json
+++ b/pages/documentation/package.json
@@ -13,6 +13,7 @@
 		"react-dom": "^17.0.2"
 	},
 	"devDependencies": {
+		"@vitejs/plugin-react": "^1.0.2",
 		"vite": "^2.6.3",
 		"sass": "^1.42.1"
 	},
