--- a/pages/documentation/tsconfig.json
+++ b/pages/documentation/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
       "rootDir": "./src",
       "outDir": "../dist",
-      "jsx": "react-jsx"
+      "jsx": "react-jsx",
+      "resolveJsonModule": true
   },
   "include": ["src"],
   "exclude": ["./node_modules", "../../node_modules"]
