--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "skipLibCheck": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
-        "composite": true,
+        "composite": false,
+        "incremental": false
     }
 }
