--- a/pages/documentation/tsconfig.json
+++ b/pages/documentation/tsconfig.json
@@ -4,6 +4,7 @@
       "rootDir": "./src",
       "outDir": "../dist",
       "jsx": "react-jsx",
+      "module": "ESNext",
       "resolveJsonModule": true
   },
   "include": ["src"],
