--- a/pages/documentation/package.json
+++ b/pages/documentation/package.json
@@ -13,6 +13,8 @@
 		"react-dom": "^17.0.2"
 	},
 	"devDependencies": {
+		"@types/react": "^17.0.27",
+		"@types/react-dom": "^17.0.9",
 		"@vitejs/plugin-react": "^1.0.2",
 		"sass": "^1.42.1",
 		"vite": "^2.6.3"
