--- a/pages/documentation/package.json
+++ b/pages/documentation/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fnrepeats-documentation",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"main": "lib/index.js",
 	"private": true,
 	"scripts": {
@@ -9,9 +9,9 @@
 		"clean": "rimraf dist"
 	},
 	"dependencies": {
+		"bootstrap": "^5.1.2",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"bootstrap": "^5.1.2"
+		"react-dom": "^17.0.2"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.27",
