--- a/pages/documentation/package.json
+++ b/pages/documentation/package.json
@@ -9,9 +9,14 @@
 		"clean": "rimraf dist"
 	},
 	"dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
 		"bootstrap": "^5.1.2",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.0-beta.0",
+    "fuse.js": "3.2.1"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.27",
