--- a/pages/documentation/package.json
+++ b/pages/documentation/package.json
@@ -15,8 +15,9 @@
 		"bootstrap": "^5.1.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.0-beta.0",
-    "fuse.js": "3.2.1"
+		"react-router-dom": "^6.0.0-beta.0",
+		"react-highlight": "^0.14.0",
+		"fuse.js": "3.2.1"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.27",
