--- a/pages/documentation/package.json
+++ b/pages/documentation/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fnrepeats-documentation",
-	"version": "0.1.4",
+	"version": "0.1.5",
 	"main": "lib/index.js",
 	"private": true,
 	"scripts": {
@@ -16,8 +16,8 @@
 		"fuse.js": "3.2.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-router-dom": "^6.0.0-beta.0",
-		"react-highlight": "^0.14.0"
+		"react-highlight": "^0.14.0",
+		"react-router-dom": "^6.0.0-beta.0"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.27",
